diplo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dimon
  labels:
    app: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
        - name: demo
          image: vaheguru/ginger:v1
          ports:
          - containerPort: 8888
