serv.yaml
apiVersion: v1
kind: Service
metadata:
  name: mimos
  labels:
    app: demo
spec:
  type: ClusterIP
  selector:
    app: demo
  ports:
  - port: 7777
    protocol: TCP
    targetPort: 8888
